kubernetes/backend-alias-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: grocerycart
spec:
  selector:
    app: grocerycart-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
