kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grocerycart-backend
  namespace: grocerycart
spec:
  selector:
    app: grocerycart-backend

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

  type: ClusterIP
