kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grocerycart-frontend
  namespace: grocerycart
spec:
  selector:
    app: grocerycart-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
