kubernetes/grocerycart-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocerycart-ingress
  namespace: grocerycart
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grocerycart-frontend
                port:
                  number: 80
